# Bascomb-Project-Templates

./: README.md
.github/workflows/: pytests.yml  python-package.yml
cheatsheets/: black-cheatsheet.md  github-cheatsheet.md  poetry-cheatsheet.md  pytest-cheatsheed.md  pytest-cheatsheet.md  venv-cheatsheet.md
poetry-template/: .coverage  README.md  pyproject.toml
poetry-template/poetry_template/: even_odd.py  main.py
poetry-template/tests/: test_even_odd.py
