[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
authors = ["Kyle Bascomb <kylebascomb@gmail.com"]
readme = "README.md"
packages = [{include = "poetry_template"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
